# proyecto-IA-plantas

./: .gitignore  .gitlab-ci.yml  Dockerfile.app  Dockerfile.server  GUIA_RAPIDA_EJECUCION.md  Makefile  README.md  docker-compose.yml  main.py  mlflow.db  pyproject.toml  pytest.ini
config/: .dockerignore  README.md  docker-compose.yml
docs/: CI_CD_GITLAB_DIGITALOCEAN.md  CI_CD_INDEX.md  CONEXION_GUIDE.md  CONFIGURACION_VARIABLES_GITLAB.md  EMERGENCY_DEPLOYMENT.md  IMPLEMENTACION.md  MAKEFILE_GUIDE.md  MEJORAS_POSIBLES.md  PROYECTO_STRUCTURE.md  README.md  VARIABLES_SECRETOS.md
scripts/: README.md  create_test_image.py  descargar_modelo.py  diagnose_connection.py  migrate-to-gitlab.ps1  setup-gitlab-runner.sh
src/: app.py  batch_processor.py  cli.py  client.py  config.py  image_classifier.proto  image_classifier_pb2.py  image_classifier_pb2_grpc.py  metrics.py  metrics_server.py  predictor.py  rate_limiter.py  server.py  structured_logging.py  tracer.py  validators.py
tests/: README.md  test_model.py
